syntax = "proto3";

package gitpod.v1;

option go_package = "github.com/gitpod-io/gitpod/components/public-api/go/v1";
import "gitpod/v1/pagination.proto";
import "google/protobuf/timestamp.proto";

service SshKeyService {
  // ListSshPublicKeys returns all the ssh public keys for the
  // authenticated user.
  rpc ListSshPublicKeys(ListSshPublicKeysRequest)
      returns (ListSshPublicKeysResponse) {}

  // CreateSshPublicKeys creates an ssh public key for the
  // authenticated user.
  rpc CreateSshPublicKey(CreateSshPublicKeyRequest)
      returns (CreateSshPublicKeyResponse) {}

  // DeleteSshPublicKeys deletes an ssh public key for the
  // authenticated user.
  rpc DeleteSshPublicKey(DeleteSshPublicKeyRequest)
      returns (DeleteSshPublicKeyResponse) {}
}

message SshPublicKey {
  string id = 1;
  string name = 2;
  string key = 3;
  string fingerprint = 4;
  google.protobuf.Timestamp creation_time = 5;
  google.protobuf.Timestamp last_used_time = 6;
}

message ListSshPublicKeysRequest { PaginationRequest pagination = 1; }

message ListSshPublicKeysResponse {
  repeated SshPublicKey ssh_keys = 1;
  PaginationRequest pagination = 2;
}

message CreateSshPublicKeyRequest {
  string name = 1;
  string key = 2;
}

message CreateSshPublicKeyResponse { SshPublicKey ssh_key = 1; }

message DeleteSshPublicKeyRequest { string id = 1; }

message DeleteSshPublicKeyResponse {}
